--- a/task-lists.html
+++ b/task-lists.html
@@ -38,9 +38,9 @@
 
                                  <li><a class="nav-link" href="./task-lists.html" style="color: white; font-size:large; ">Λίστες Εργασιών</a>
                                  </li>
-                                  <li><a class="nav-link" href="/teams.html" style="color: white; font-size:large;">Ομάδες</a>
+                                  <li><a class="nav-link" href="./teams.html" style="color: white; font-size:large;">Ομάδες</a>
                                   </li>
-                                  <li><a class="nav-link" href="/login.html" style="color: white; font-size:large;">Είσοδος</a>          
+                                  <li><a class="nav-link" href="./login.html" style="color: white; font-size:large;">Είσοδος</a>          
                                   </li>
                               </ul>
                             
