--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
                                    <li><a class="nav-link" href="./task-lists.html" style="color: white; font-size:large; ">Λίστες Εργασιών</a>
                                    </li>
-                                    <li><a class="nav-link" href="/teams.html" style="color: white; font-size:large;">Ομάδες</a>
+                                    <li><a class="nav-link" href="./teams.html" style="color: white; font-size:large;">Ομάδες</a>
                                     </li>
-                                    <li><a class="nav-link" href="/login.html" style="color: white; font-size:large;">Είσοδος</a>          
+                                    <li><a class="nav-link" href="./login.html" style="color: white; font-size:large;">Είσοδος</a>          
                                     </li>
                                 </ul>
                               
@@ -58,8 +58,8 @@
         </div>
         <!--Sign-up Login buttons-->
         <div id="login-buttons">
-            <a href="/login.html" class="login-button" style="text-decoration: none;">Είσοδος</a>
-            <a href="/sign-up-form.html" class="login-button" style="text-decoration: none;">Εγγραφή </a>
+            <a href="./login.html" class="login-button" style="text-decoration: none;">Είσοδος</a>
+            <a href="./sign-up-form.html" class="login-button" style="text-decoration: none;">Εγγραφή </a>
 
         </div>
         </div>
